# typst-docs

./: Gemini - Cyber Law and Ethics Interview Prep.md  cyber_ethics_policy.typ  cyber_law_gap_analysis.typ  cyber_law_interview_prep.typ  cyber_law_presentation.typ  cyber_policy_comparison.typ  main.typ  os-practical-three.typ
cle-ala/: cyber_ethics_policy.typ  cyber_policy_comparison.typ
cv-lab-manual/: .gitignore  Gemini - Computer Vision Lab Manual Creation.md  devenv.nix  main.typ  pyproject.toml
cv-lab-manual/experiments/: common.typ  practical-1.typ  practical-10.typ  practical-11.typ  practical-12.typ  practical-2.typ  practical-3.typ  practical-4.typ  practical-5.typ  practical-6.typ  practical-7.typ  practical-8.typ  practical-9.typ  test_break.typ
cv-lab-manual/scripts/: generate-outputs.sh  practical-1.py  practical-10.py  practical-11.py  practical-12.py  practical-2.py  practical-3.py  practical-4.py  practical-5.py  practical-6.py  practical-7.py  practical-8.py  practical-9.py
dbms-ala/: normalization_steps.typ  triggers_in_dbms.typ
experiments/: common.typ  practical-1.typ  practical-10.typ  practical-11.typ  practical-12.typ  practical-2a.typ  practical-2b.typ  practical-3a.typ  practical-3b.typ  practical-4.typ  practical-5.typ  practical-6.typ  practical-7a.typ  practical-7b.typ  practical-8.typ  practical-9.typ
heat-transfer/: main.typ
old/: os-practical-two.typ  os-practical.typ
os-ala/: Gemini - Java and Python Thread Creation.md  deadlock-assignment.typ  metadata.json  thread-process.typ
os-lab-manual/: main.typ
(+51 files in other folders)
